@@ -6,6 +6,7 @@ Version 0.14.11:
 		* Fix various runtime errors.
 		* Fix crash when creating a reaction with no product.
 		* Enhanced Chemdraw formats support.
+		* Fix embedding of a whole molecule inside brackets. [#47224]
 	GChemTable:
 		* Don't crash when showing an already existing chart.
 		[Redhat bug #1302135]
