@@ -1,5 +1,9 @@
 ##Text encoding: utf-8
 
+2016-02-22  Jean Bréfort  <jean.brefort@normalesup.org>
+	* libs/gcp/brackets.cc: fix embedding of a whole molecule. [#47224]
+	* plugins/paint/selection/bracketstool.cc: fix spacings.
+
 2016-02-21  Jean Bréfort  <jean.brefort@normalesup.org>
 	* libs/gcp/reactant.h: make reaction export to .cdx possible.
 	* libs/gcp/reaction-prop.cc: ditto.
